--- a/arch/arm64/configs/exynos7885-jackpotlte_defconfig
+++ b/arch/arm64/configs/exynos7885-jackpotlte_defconfig
@@ -5232,3 +5232,5 @@ CONFIG_LIBFDT=y
 CONFIG_ARCH_HAS_SG_CHAIN=y
 CONFIG_FPSIMD_CORRUPTION_DETECT=y
 CONFIG_TRIM_UNUSED_KSYMS=n
+CONFIG_REKERNEL=y
+CONFIG_REKERNEL_NETWORK=n
